--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,14 +151,14 @@
   }
   .index .fonctionnement ol li {
     width: 322px;
-    height: 72px;
-    line-height: 4.5;
+    padding: 26px 0;
+    text-align: center;
   }
   .index .fonctionnement ol li i {
-    margin: 0 15px;
+    margin: 0 8px 0 0;
   }
   .index .fonctionnement ol li::before {
-    top: 36px;
+    top: 26px;
   }
   .index .restaurants {
     gap: 28px;
@@ -166,15 +166,12 @@
     background-color: #F6F6F6;
   }
   .index .restaurants .card-container {
-    gap: 28px;
+    gap: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-  .index .restaurants .card-container :nth-child(even) {
-    justify-self: end;
-  }
   .index .restaurants .card-container .card {
-    width: 490px;
+    width: 100%;
   }
   .index footer {
     flex-direction: row-reverse;
@@ -310,19 +307,24 @@
   .menus {
     background-color: white;
   }
-  .menus main {
-    background-color: white;
-  }
   .menus main .menu-container {
-    width: 1055px;
+    max-width: 1055px;
+    width: 100%;
     margin: auto;
+    align-items: center;
+  }
+  .menus main .menu-container section {
+    /*
+    max-width: 634px;
+    width: 100%;
+    */
   }
   .menus main .menu-container section h2 {
-    margin: 12px 19%;
+    margin: 12px 5px;
   }
   .menus main .menu-container section .card {
-    width: 634px;
     height: 69px;
+    width: 634px;
   }
   .menus main .menu-container button {
     position: relative;
